# libqi-java

./: .gitignore  COPYING  README.rst  README.txt  qiproject.xml
doc/: qiproject.xml
doc/source/: conf.py  index.rst
doc/source/samples/HelloService/: App.java  HelloService.java
doc/source/samples/ReactToEvents/: ReactToEvents.java
doc/source/samples/SayHello/: SayHello.java
examples/android/: README.rst
examples/android/RobotTalk/: pom.xml
examples/android/RobotTalk/src/com/aldebaran/: HelloAndroidActivity.java
examples/sayhello/: SayHello.java
jni/: CMakeLists.txt  qiproject.xml
jni/jni/: application_jni.hpp  callbridge.hpp  enumeration_jni.hpp  future_jni.hpp  futurehandler.hpp  jnitools.hpp  jobjectconverter.hpp  list_jni.hpp  map_jni.hpp  object.hpp  object_jni.hpp  objectbuilder.hpp  optional_jni.hpp  promise_jni.hpp  property.hpp  qitools.hpp  rawapplication_jni.hpp  servicedirectory_jni.hpp  session_jni.hpp  tuple_jni.hpp
jni/src/: application_jni.cpp  callbridge.cpp  enumeration_jni.cpp  future_jni.cpp  futurehandler.cpp  jnitools.cpp  jobjectconverter.cpp  list_jni.cpp  map_jni.cpp  object.cpp  object_jni.cpp  objectbuilder.cpp  optional_jni.cpp  promise_jni.cpp  property.cpp  qitools.cpp  rawapplication_jni.cpp  servicedirectory_jni.cpp  session_jni.cpp  tuple_jni.cpp
jni/test/: test_common.cpp  test_common.hpp  test_futurejni.cpp  test_qijni.cpp
qimessaging/: AndroidManifest.xml  README.rst  copy-jni-resources.py  generate_tuples.py  pom-android.xml  pom-arm.xml  pom-atom.xml  pom-desktop.xml  pom.xml  stylesheet.css  update_bindings
qimessaging/info/: ReadmePropertyManagement.md
qimessaging/src/integration-test/java/com/aldebaran/qi/: SharedLibraryIT.java
qimessaging/src/main/java/com/aldebaran/qi/: AdvertisedMethodCaller.java  AdvertisedMethodDescription.java  AdvertisedMethodMonitor.java  AdvertisementException.java  Algorithm.java  AnyObject.java  Application.java  CallError.java  Callback.java  ClientAuthenticator.java  ClientAuthenticatorFactory.java  ConnectionError.java  Consumer.java  DynamicCallException.java  DynamicObjectBuilder.java  EmbeddedTools.java  Function.java  FunctionCallback.java  Future.java  FutureCallbackAdapter.java  FutureCallbackType.java  FutureConsumer.java  FutureFunction.java  FutureFunctionCallback.java  NativeLibrariesLoader.java  NativeTools.java  Objects.java  Optional.java  Predicate.java  Promise.java  Property.java  QiCallback.java  QiConversionException.java  QiException.java  QiField.java  QiFunction.java  QiFunctionAdapter.java  QiRuntimeException.java  QiService.java  QiSignalConnection.java  (+50 more)
qimessaging/src/main/java/com/aldebaran/qimessaging/: AnyObject.java  Application.java  DynamicObjectBuilder.java  EmbeddedTools.java  Future.java  GenericObjectBuilder.java  Object.java  QimessagingService.java  RawApplication.java  Session.java  SharedLibrary.java  Tuple.java  Tuple1.java  Tuple10.java  Tuple11.java  Tuple12.java  Tuple13.java  Tuple14.java  Tuple15.java  Tuple16.java  Tuple17.java  Tuple18.java  Tuple19.java  Tuple2.java  Tuple20.java  Tuple21.java  Tuple22.java  Tuple23.java  Tuple24.java  Tuple25.java  (+14 more)
(+61 files in other folders)
